--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
   <section class="section3">
 
         <div class="button">
-          <img src="./media/button1.png">
+          <a href="./pages/name.html"><img src="./media/button1.png"></a>
           <a href="./pages/name.html">THE PROCESS</a>
         </div>
 
         <div class="button">
-          <img src="./media/button2.png">
+          <a href="./pages/name.html"><img src="./media/button2.png"></a>
           <a href="./pages/name.html">MEDIA GALLERY</a>
         </div>
 
         <div class="button">
-          <img src="./media/button3.png">
+          <a href="./pages/name.html"><img src="./media/button3.png"></a>
           <a href="./pages/name.html">ROBLOX CREATIONS</a>
         </div>
 
         <div class="button">
-          <img src="./media/button4.png">
-          <a href="./pages/name.html">FAQ + REFS.</a>
+          <a href="./pages/name.html"><img src="./media/button4.png"></a>
+          <a href="./pages/name.html">N-FAQ + REFS.</a>
         </div>
 
     </section>
